# acme-ocr

./: .env.example  .gitignore  README.md  package.json  本地OCR桌面软件技术方案_Codex可直接生成代码.md
.github/workflows/: build-dmg.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  models.rs  state.rs
apps/desktop/src/components/: BootstrapCard.tsx  OcrPanel.tsx  StatusPill.tsx  WorkerCard.tsx
apps/desktop/src/hooks/: useBootstrapProgress.ts
apps/desktop/src/lib/: tauri.ts  types.ts  worker.ts
apps/desktop/src/styles/: global.css
docs/: github-dmg-build.md  runtime-install-strategy.md
infra/manifests/: darwin-aarch64.json  darwin-x64.json  windows-x64.json
scripts/: release_utils.py
scripts/build-model-bundle/: README.md  build.ps1  build.sh  build_model_bundle.py  paddle_model_catalog.json
scripts/build-runtime-bundle/: README.md  build.ps1  build.sh  build_runtime_bundle.py
scripts/generate-manifests/: README.md  generate_manifests.py
services/ocr-worker/: main.py
services/ocr-worker/app/: __init__.py  main.py
services/ocr-worker/app/api/: routes.py
services/ocr-worker/app/core/: __init__.py  config.py  logging.py
services/ocr-worker/app/db/: __init__.py  database.py
services/ocr-worker/app/engine/: paddle_adapter.py
services/ocr-worker/app/models/: schemas.py
services/ocr-worker/app/services/: bootstrap_service.py  export_service.py  job_service.py  (+1 more)
