[package]
name = "acme-ocr"
version = "0.1.0"
description = "Cross-platform offline OCR desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "acme_ocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

